# MR-Kommo-Sync-Leads

./: .env.example  .gitignore  AGENTS.md  README.md  apply_kommo_safe_payloads.py  apply_single_kommo_payload.py  build_desktop_installer.py  build_secrets.py  clinic_kommo_field_mappings.py  clinic_kommo_payload_preview.py  clinic_kommo_sync_controlled_test.py  clinic_operational_fields_sync.py  db_util.py  env_config.py  index.html  kommo_leads_sqlite.py  login.py  migrate_db_encryption.py  package-lock.json  package.json  procedimentos_unicos_mapeamento_final.xlsx  requirements.txt  sanity_check_secrets.py  state_util.py  vite.config.ts
config/: app_auth.json
docs/: resumo_executivo_hardening.html
mappings/: clinic_kommo_origin_mapping.csv  clinic_kommo_service_mapping.csv
scripts/: build_secrets.py  build_security_summary_pdf.py  migrate_db_encryption.py
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  secrets.rs
src-tauri/windows/: hooks.nsh
tests/: test_exact_age_payload.py  test_patient_paid_financials.py  test_service_mapping.py
