[package]
name = "mirella_kommo_sync_desktop"
version = "0.1.0"
description = "Desktop dashboard for Clínica Ágil to Kommo lead enrichment"
authors = ["Mirella Rabelo Sync"]
license = "UNLICENSED"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
aes-gcm = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
sha2 = "0.10"

[features]
custom-protocol = ["tauri/custom-protocol"]

# Optimizations tuned for distribution on modest Windows machines.
# Reduce binary size and runtime overhead at the cost of longer compile time.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
incremental = false
